test/error/test5.pl0
PROGRAM test5
VAR x,y;
CONST z:=1;
